# ip_marketplace

src/ip_market_backend/: ARCHITECTURE.md  Cargo.toml
src/ip_market_backend/src/: lib.rs
